k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: backend
  name: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      name: backend
  template:
    metadata:
      labels:
        name: backend
    spec:
      containers:
        - env:
            - name: BACKEND_CORS_ORIGINS
              value: '["http://localhost:3000", "http://localhost:5000", "https://evox.rasztabiga.me"]'
            - name: POSTGRES_SERVER
              value: db:5432
            - name: API_KEY
              value: ca9c1d4509ec6c9b9550fecfab3817a9b87e5e06bcbfe94298b12ce14ca8e428
          image: navareth/evox:master
          name: backend
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
