k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: evox-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
    - host: evox.rasztabiga.me
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: backend
                port:
                  number: 8080
